@@ -1,5 +1,7 @@
 === HEAD
 
+* Make inheritance plugins set class column before validation, works better with auto_validations (jeremyevans)
+
 * Support a default Dataset#import slice size, set to 500 on SQLite (jeremyevans) (#810)
 
 * Make :read_only transaction option be per-savepoint on PostgreSQL (jeremyevans) (#807)
